@@ -8,7 +8,7 @@ Thanks to:
     Vadim Kalinnikov <moose@ylsoftware.com> - project hosting
     Erik Ölsar <erlk.ozlr@gmail.com> - skinned cursors, ui improvements
     Funda Wang <fundawang@gmail.com> - cmake files fixes
-    Michail Zeludkov <zheludkovm@mail.ru> - ffmpeg plugin fixes
+    Michail Zheludkov <zheludkovm@mail.ru> - ffmpeg plugin fixes
     Panagiotis Papadopoulos <pano_90@gmx.net> - ui fixes, bug reports
     Pino Toscano <toscano.pino@tiscali.it> - portability patches
     Karel Volný <kvolny@redhat.com> - various fixes
